// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalBarBlock can stack data 1`] = `
<div>
  <div
    class="recharts-responsive-container"
    style="width: 900px; height: 900px;"
  >
    <div
      class="recharts-wrapper"
      style="position: relative; cursor: default; width: 900px; height: 900px;"
    >
      <svg
        class="recharts-surface"
        height="900"
        version="1.1"
        viewBox="0 0 900 900"
        width="900"
      >
        <defs>
          <clippath
            id="recharts36-clip"
          >
            <rect
              height="870"
              width="810"
              x="90"
              y="0"
            />
          </clippath>
        </defs>
        <g
          class="recharts-cartesian-grid"
        >
          <g
            class="recharts-cartesian-grid-horizontal"
          >
            <line
              fill="none"
              height="870"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="0"
              y1="870"
              y2="870"
            />
            <line
              fill="none"
              height="870"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="0"
              y1="621.4285714285714"
              y2="621.4285714285714"
            />
            <line
              fill="none"
              height="870"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="0"
              y1="372.8571428571429"
              y2="372.8571428571429"
            />
            <line
              fill="none"
              height="870"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="0"
              y1="0"
              y2="0"
            />
          </g>
          <g
            class="recharts-cartesian-grid-vertical"
          >
            <line
              fill="none"
              height="870"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="302.5"
              x2="302.5"
              y="0"
              y1="0"
              y2="870"
            />
            <line
              fill="none"
              height="870"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="687.5"
              x2="687.5"
              y="0"
              y1="0"
              y2="870"
            />
            <line
              fill="none"
              height="870"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="90"
              y="0"
              y1="0"
              y2="870"
            />
            <line
              fill="none"
              height="870"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="900"
              x2="900"
              y="0"
              y1="0"
              y2="870"
            />
          </g>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
        >
          <line
            class="recharts-cartesian-axis-line"
            fill="none"
            height="870"
            stroke="#666"
            width="60"
            x="30"
            x1="90"
            x2="90"
            y="0"
            y1="0"
            y2="870"
          />
          <g
            class="recharts-cartesian-axis-ticks"
          >
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="870"
                stroke="#666"
                width="60"
                x="30"
                x1="84"
                x2="90"
                y="0"
                y1="870"
                y2="870"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="870"
                stroke="none"
                text-anchor="end"
                width="60"
                x="82"
                y="870"
              >
                <tspan
                  dy="0.355em"
                  x="82"
                >
                  -3
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="870"
                stroke="#666"
                width="60"
                x="30"
                x1="84"
                x2="90"
                y="0"
                y1="621.4285714285714"
                y2="621.4285714285714"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="870"
                stroke="none"
                text-anchor="end"
                width="60"
                x="82"
                y="621.4285714285714"
              >
                <tspan
                  dy="0.355em"
                  x="82"
                >
                  3
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="870"
                stroke="#666"
                width="60"
                x="30"
                x1="84"
                x2="90"
                y="0"
                y1="372.8571428571429"
                y2="372.8571428571429"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="870"
                stroke="none"
                text-anchor="end"
                width="60"
                x="82"
                y="372.8571428571429"
              >
                <tspan
                  dy="0.355em"
                  x="82"
                >
                  9
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="870"
                stroke="#666"
                width="60"
                x="30"
                x1="84"
                x2="90"
                y="0"
                y1="0"
                y2="0"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="870"
                stroke="none"
                text-anchor="end"
                width="60"
                x="82"
                y="0"
              >
                <tspan
                  dy="0.355em"
                  x="82"
                >
                  18
                </tspan>
              </text>
            </g>
          </g>
          <text
            class="recharts-text recharts-label"
            text-anchor="end"
            transform="rotate(-90, 30, 435)"
            x="30"
            y="435"
          >
            <tspan
              dy="0.355em"
              x="30"
            />
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
        >
          <line
            class="recharts-cartesian-axis-line"
            fill="none"
            height="30"
            stroke="#666"
            width="810"
            x="90"
            x1="90"
            x2="900"
            y="870"
            y1="870"
            y2="870"
          />
          <g
            class="recharts-cartesian-axis-ticks"
          >
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="30"
                stroke="#666"
                width="810"
                x="90"
                x1="302.5"
                x2="302.5"
                y="870"
                y1="876"
                y2="870"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="30"
                stroke="none"
                text-anchor="middle"
                width="810"
                x="302.5"
                y="886"
              >
                <tspan
                  dy="0.71em"
                  x="302.5"
                >
                  2014/15
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="30"
                stroke="#666"
                width="810"
                x="90"
                x1="687.5"
                x2="687.5"
                y="870"
                y1="876"
                y2="870"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="30"
                stroke="none"
                text-anchor="middle"
                width="810"
                x="687.5"
                y="886"
              >
                <tspan
                  dy="0.71em"
                  x="687.5"
                >
                  2015/16
                </tspan>
              </text>
            </g>
          </g>
          <text
            class="recharts-text recharts-label"
            text-anchor="middle"
            x="495"
            y="905"
          >
            <tspan
              dy="0.71em"
              x="495"
            />
          </text>
        </g>
        <g
          class="recharts-layer recharts-bar"
        >
          <g
            class="recharts-layer recharts-bar-rectangles"
          >
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 148.5,621.4285714285714 h 308 v 124.28571428571433 h -308 Z"
                fill="#ff0000"
                height="124.28571428571433"
                radius="0"
                stroke="#ff0000"
                width="308"
                x="148.5"
                y="621.4285714285714"
              />
            </g>
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 533.5,870 h 308 v -124.28571428571422 h -308 Z"
                fill="#ff0000"
                height="-124.28571428571422"
                radius="0"
                stroke="#ff0000"
                width="308"
                x="533.5"
                y="870"
              />
            </g>
          </g>
        </g>
        <g
          class="recharts-layer recharts-bar"
        >
          <g
            class="recharts-layer recharts-bar-rectangles"
          >
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 148.5,207.14285714285722 h 308 v 414.2857142857142 h -308 Z"
                fill="#ff0000"
                height="414.2857142857142"
                radius="0"
                stroke="#ff0000"
                width="308"
                x="148.5"
                y="207.14285714285722"
              />
            </g>
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 533.5,704.2857142857143 h 308 v 165.71428571428567 h -308 Z"
                fill="#ff0000"
                height="165.71428571428567"
                radius="0"
                stroke="#ff0000"
                width="308"
                x="533.5"
                y="704.2857142857143"
              />
            </g>
          </g>
        </g>
        <g
          class="recharts-layer recharts-bar"
        >
          <g
            class="recharts-layer recharts-bar-rectangles"
          >
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 148.5,0 h 308 v 207.14285714285722 h -308 Z"
                fill="#ff0000"
                height="207.14285714285722"
                radius="0"
                stroke="#ff0000"
                width="308"
                x="148.5"
                y="0"
              />
            </g>
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 533.5,662.8571428571429 h 308 v 41.428571428571445 h -308 Z"
                fill="#ff0000"
                height="41.428571428571445"
                radius="0"
                stroke="#ff0000"
                width="308"
                x="533.5"
                y="662.8571428571429"
              />
            </g>
          </g>
        </g>
      </svg>
      <div
        class="recharts-tooltip-wrapper"
        style="pointer-events: none; visibility: hidden; position: absolute; top: 0px; transform: translate(undefinedpx, undefinedpx);"
      >
        <div
          class="recharts-default-tooltip"
          style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid #ccc; white-space: nowrap;"
        >
          <p
            class="recharts-tooltip-label"
            style="margin: 0px;"
          />
        </div>
      </div>
    </div>
    <div
      style="position: absolute; width: 0px; height: 0px; visibility: hidden; display: none;"
    />
  </div>
</div>
`;

exports[`VerticalBarBlock renders basic chart correctly 1`] = `
<div>
  <div
    class="recharts-responsive-container"
    style="width: 900px; height: 900px;"
  >
    <div
      class="recharts-wrapper"
      style="position: relative; cursor: default; width: 900px; height: 900px;"
    >
      <svg
        class="recharts-surface"
        height="900"
        version="1.1"
        viewBox="0 0 900 900"
        width="900"
      >
        <defs>
          <clippath
            id="recharts4-clip"
          >
            <rect
              height="860"
              width="810"
              x="90"
              y="10"
            />
          </clippath>
        </defs>
        <g
          class="recharts-cartesian-grid"
        >
          <g
            class="recharts-cartesian-grid-horizontal"
          >
            <line
              fill="none"
              height="860"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="10"
              y1="870"
              y2="870"
            />
            <line
              fill="none"
              height="860"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="10"
              y1="605.3846153846154"
              y2="605.3846153846154"
            />
            <line
              fill="none"
              height="860"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="10"
              y1="340.7692307692307"
              y2="340.7692307692307"
            />
            <line
              fill="none"
              height="860"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="10"
              y1="10"
              y2="10"
            />
          </g>
          <g
            class="recharts-cartesian-grid-vertical"
          >
            <line
              fill="none"
              height="860"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="302.5"
              x2="302.5"
              y="10"
              y1="10"
              y2="870"
            />
            <line
              fill="none"
              height="860"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="687.5"
              x2="687.5"
              y="10"
              y1="10"
              y2="870"
            />
            <line
              fill="none"
              height="860"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="90"
              y="10"
              y1="10"
              y2="870"
            />
            <line
              fill="none"
              height="860"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="900"
              x2="900"
              y="10"
              y1="10"
              y2="870"
            />
          </g>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
        >
          <line
            class="recharts-cartesian-axis-line"
            fill="none"
            height="860"
            stroke="#666"
            width="60"
            x="30"
            x1="90"
            x2="90"
            y="10"
            y1="10"
            y2="870"
          />
          <g
            class="recharts-cartesian-axis-ticks"
          >
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="860"
                stroke="#666"
                width="60"
                x="30"
                x1="84"
                x2="90"
                y="10"
                y1="870"
                y2="870"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="860"
                stroke="none"
                text-anchor="end"
                width="60"
                x="82"
                y="870"
              >
                <tspan
                  dy="0.355em"
                  x="82"
                >
                  -3
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="860"
                stroke="#666"
                width="60"
                x="30"
                x1="84"
                x2="90"
                y="10"
                y1="605.3846153846154"
                y2="605.3846153846154"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="860"
                stroke="none"
                text-anchor="end"
                width="60"
                x="82"
                y="605.3846153846154"
              >
                <tspan
                  dy="0.355em"
                  x="82"
                >
                  1
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="860"
                stroke="#666"
                width="60"
                x="30"
                x1="84"
                x2="90"
                y="10"
                y1="340.7692307692307"
                y2="340.7692307692307"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="860"
                stroke="none"
                text-anchor="end"
                width="60"
                x="82"
                y="340.7692307692307"
              >
                <tspan
                  dy="0.355em"
                  x="82"
                >
                  5
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="860"
                stroke="#666"
                width="60"
                x="30"
                x1="84"
                x2="90"
                y="10"
                y1="10"
                y2="10"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="860"
                stroke="none"
                text-anchor="end"
                width="60"
                x="82"
                y="10"
              >
                <tspan
                  dy="0.355em"
                  x="82"
                >
                  10
                </tspan>
              </text>
            </g>
          </g>
          <text
            class="recharts-text recharts-label"
            text-anchor="end"
            transform="rotate(-90, 30, 440)"
            x="30"
            y="440"
          >
            <tspan
              dy="0.355em"
              x="30"
            />
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
        >
          <line
            class="recharts-cartesian-axis-line"
            fill="none"
            height="30"
            stroke="#666"
            width="810"
            x="90"
            x1="90"
            x2="900"
            y="870"
            y1="870"
            y2="870"
          />
          <g
            class="recharts-cartesian-axis-ticks"
          >
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="30"
                stroke="#666"
                width="810"
                x="90"
                x1="302.5"
                x2="302.5"
                y="870"
                y1="876"
                y2="870"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="30"
                stroke="none"
                text-anchor="middle"
                width="810"
                x="302.5"
                y="886"
              >
                <tspan
                  dy="0.71em"
                  x="302.5"
                >
                  2014/15
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="30"
                stroke="#666"
                width="810"
                x="90"
                x1="687.5"
                x2="687.5"
                y="870"
                y1="876"
                y2="870"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="30"
                stroke="none"
                text-anchor="middle"
                width="810"
                x="687.5"
                y="886"
              >
                <tspan
                  dy="0.71em"
                  x="687.5"
                >
                  2015/16
                </tspan>
              </text>
            </g>
          </g>
          <text
            class="recharts-text recharts-label"
            text-anchor="middle"
            x="495"
            y="905"
          >
            <tspan
              dy="0.71em"
              x="495"
            />
          </text>
        </g>
        <g
          class="recharts-layer recharts-bar"
        >
          <g
            class="recharts-layer recharts-bar-rectangles"
          >
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 148.5,473.07692307692304 h 100 v 198.4615384615385 h -100 Z"
                fill="#ff0000"
                height="198.4615384615385"
                radius="0"
                stroke="#ff0000"
                width="100"
                x="148.5"
                y="473.07692307692304"
              />
            </g>
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 533.5,870 h 100 v -198.46153846153845 h -100 Z"
                fill="#ff0000"
                height="-198.46153846153845"
                radius="0"
                stroke="#ff0000"
                width="100"
                x="533.5"
                y="870"
              />
            </g>
          </g>
        </g>
        <g
          class="recharts-layer recharts-bar"
        >
          <g
            class="recharts-layer recharts-bar-rectangles"
          >
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 252.5,10 h 100 v 661.5384615384615 h -100 Z"
                fill="#ff0000"
                height="661.5384615384615"
                radius="0"
                stroke="#ff0000"
                width="100"
                x="252.5"
                y="10"
              />
            </g>
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 637.5,406.92307692307696 h 100 v 264.6153846153846 h -100 Z"
                fill="#ff0000"
                height="264.6153846153846"
                radius="0"
                stroke="#ff0000"
                width="100"
                x="637.5"
                y="406.92307692307696"
              />
            </g>
          </g>
        </g>
        <g
          class="recharts-layer recharts-bar"
        >
          <g
            class="recharts-layer recharts-bar-rectangles"
          >
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 356.5,340.7692307692307 h 100 v 330.76923076923083 h -100 Z"
                fill="#ff0000"
                height="330.76923076923083"
                radius="0"
                stroke="#ff0000"
                width="100"
                x="356.5"
                y="340.7692307692307"
              />
            </g>
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 741.5,605.3846153846154 h 100 v 66.15384615384619 h -100 Z"
                fill="#ff0000"
                height="66.15384615384619"
                radius="0"
                stroke="#ff0000"
                width="100"
                x="741.5"
                y="605.3846153846154"
              />
            </g>
          </g>
        </g>
      </svg>
      <div
        class="recharts-legend-wrapper"
        style="position: absolute; width: 870px; height: 50px; left: 30px; top: 10px;"
      >
        <ul
          class="recharts-default-legend"
          style="padding: 0px; margin: 0px; text-align: center;"
        >
          <li
            class="recharts-legend-item legend-item-0"
            style="display: inline-block; margin-right: 10px;"
          >
            <svg
              class="recharts-surface"
              height="14"
              style="display: inline-block; vertical-align: middle; margin-right: 4px;"
              version="1.1"
              viewBox="0 0 32 32"
              width="14"
            >
              <path
                class="recharts-legend-icon"
                d="M0,4h32v24h-32z"
                fill="#ff0000"
                stroke="none"
              />
            </svg>
            <span
              class="recharts-legend-item-text"
            >
              Unauthorised absence rate
            </span>
          </li>
          <li
            class="recharts-legend-item legend-item-1"
            style="display: inline-block; margin-right: 10px;"
          >
            <svg
              class="recharts-surface"
              height="14"
              style="display: inline-block; vertical-align: middle; margin-right: 4px;"
              version="1.1"
              viewBox="0 0 32 32"
              width="14"
            >
              <path
                class="recharts-legend-icon"
                d="M0,4h32v24h-32z"
                fill="#ff0000"
                stroke="none"
              />
            </svg>
            <span
              class="recharts-legend-item-text"
            >
              Overall absence rate
            </span>
          </li>
          <li
            class="recharts-legend-item legend-item-2"
            style="display: inline-block; margin-right: 10px;"
          >
            <svg
              class="recharts-surface"
              height="14"
              style="display: inline-block; vertical-align: middle; margin-right: 4px;"
              version="1.1"
              viewBox="0 0 32 32"
              width="14"
            >
              <path
                class="recharts-legend-icon"
                d="M0,4h32v24h-32z"
                fill="#ff0000"
                stroke="none"
              />
            </svg>
            <span
              class="recharts-legend-item-text"
            >
              Authorised absence rate
            </span>
          </li>
        </ul>
      </div>
      <div
        class="recharts-tooltip-wrapper"
        style="pointer-events: none; visibility: hidden; position: absolute; top: 0px; transform: translate(undefinedpx, undefinedpx);"
      >
        <div
          class="recharts-default-tooltip"
          style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid #ccc; white-space: nowrap;"
        >
          <p
            class="recharts-tooltip-label"
            style="margin: 0px;"
          />
        </div>
      </div>
    </div>
    <div
      style="position: absolute; width: 0px; height: 0px; visibility: hidden; display: none;"
    />
  </div>
</div>
`;
